# langgraph-mesh

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/langgraph_server/: index.md  schemas.md  types.md
docs/langgraph_server/agents/: agent.md  client.md  index.md  server.md
docs/langgraph_server/graphs/: client.md  index.md  server.md  supervisor.md  swarm.md
examples/: example.py
examples/agents/: create_simple_agent.py
examples/graph/: agents_server.py  simple_supervisor_chat.py  simple_supervisor_chat_to_remote_agent.py
examples/server/: agent.py  simple_client.py  simple_server.py
langgraph_mesh/: types.py
langgraph_mesh/agents/: __init__.py  agent.py  client.py  server.py
langgraph_mesh/graphs/: supervisor.py  swarm.py
langgraph_server/agents/: agent.py  client.py  server.py
langgraph_server/graphs/: supervisor.py  swarm.py
