[project]
name = "langgraph-mesh"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "fastapi>=0.115.14",
    "httpx>=0.28.1",
    "jsonpickle>=4.1.1",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.0",
    "langgraph-supervisor>=0.0.27",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
