# Este es el archivo de configuración estándar para proyectos de Python.
# Define cómo se construye tu paquete y cuáles son sus metadatos.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-server"
version = "0.1.0"
authors = [
  { name="Orestes Michel Lopez Perez", email="oreste.lopez@gmail.com" },
]
description = "Un servidor y cliente para desplegar e interactuar dinámicamente con agentes de LangGraph."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "jsonpickle",
    "langgraph",
    "langchain-core",
    "langgraph-supervisor",
    "pydantic",
    "langchain-openai" # Necesario para los ejemplos
]

[project.urls]
Homepage = "https://github.com/tu-usuario/langgraph-server" # Reemplaza con la URL de tu repo
Issues = "https://github.com/tu-usuario/langgraph-server/issues" # Reemplaza con la URL de tu repo
